--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -1,11 +1,8 @@
-name: Portfolio Alerts
+name: Daily Stock News
 
 on:
   schedule:
-    # Lunes 13:30 UTC = Lunes 08:30 Lima (UTC-5) test
-    - cron: "30 13 * * 1"
-    - cron: "0 15 * * 1-5" # 10:00 Lima (L-V)
-    - cron: "30 19 * * 1-5" # 14:30 Lima (L-V)
+    - cron: "40 13 * * 1-5" # L-V 08:40 Lima (UTC-5)
   workflow_dispatch: {}
 
 jobs:
@@ -22,7 +19,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run script
+      - name: Run news digest
         env:
           SHEET_CSV_URL: ${{ secrets.SHEET_CSV_URL }}
           FROM_EMAIL: ${{ secrets.FROM_EMAIL }}
@@ -31,4 +28,7 @@ jobs:
           SMTP_PORT: ${{ secrets.SMTP_PORT }}
           SMTP_USER: ${{ secrets.SMTP_USER }}
           SMTP_PASS: ${{ secrets.SMTP_PASS }}
-        run: python main.py
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_MODEL: gpt-4o-mini
+          MAX_ARTICLES_PER_TICKER: "4"
+        run: python news_digest.py
