--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -2,7 +2,7 @@ name: Daily Stock News
 
 on:
   schedule:
-    - cron: "40 13 * * 1-5" # L-V 08:40 Lima (UTC-5)
+    - cron: "45 13 * * 1-5" # L-V 08:45 Lima (UTC-5)
   workflow_dispatch: {}
 
 jobs:
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
@@ -31,4 +32,14 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           OPENAI_MODEL: gpt-4o-mini
           MAX_ARTICLES_PER_TICKER: "4"
-        run: python news_digest.py
+          SEND_LOCAL_TZ: America/Lima
+          SEND_AT_HHMM: "08:45"
+        run: |
+          ATTEMPTS=0
+          until [ $ATTEMPTS -ge 3 ]
+          do
+            python news_digest.py && break
+            ATTEMPTS=$((ATTEMPTS+1))
+            echo "Fallo #$ATTEMPTS, reintentando en 20s..."
+            sleep 20
+          done
