--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -1,4 +1,4 @@
-name: Daily Stock News
+name: Daily Stock News Enhanced
 
 on:
   schedule:
@@ -20,7 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run news digest
+      - name: Run enhanced news digest
         env:
           SHEET_CSV_URL: ${{ secrets.SHEET_CSV_URL }}
           FROM_EMAIL: ${{ secrets.FROM_EMAIL }}
@@ -30,15 +30,19 @@ jobs:
           SMTP_USER: ${{ secrets.SMTP_USER }}
           SMTP_PASS: ${{ secrets.SMTP_PASS }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          OPENAI_MODEL: gpt-4o-mini
-          MAX_ARTICLES_PER_TICKER: "4"
-          SEND_LOCAL_TZ: America/Lima
-          SEND_AT_HHMM: "08:45"
+          OPENAI_MODEL: ${{ secrets.OPENAI_MODEL || 'gpt-5-mini' }}
+          MAX_ARTICLES_PER_SOURCE: ${{ secrets.MAX_ARTICLES_PER_SOURCE || '3' }}
+          SEND_LOCAL_TZ: ${{ secrets.SEND_LOCAL_TZ || 'America/Lima' }}
+          SEND_AT_HHMM: ${{ secrets.SEND_AT_HHMM || '08:45' }}
+          MARKETAUX_API_KEY: ${{ secrets.MARKETAUX_API_KEY }}
+          ENABLE_REBALANCING: ${{ secrets.ENABLE_REBALANCING || 'true' }}
+          MIN_TRADE_VALUE: ${{ secrets.MIN_TRADE_VALUE || '100' }}
+          MAX_DEVIATION: ${{ secrets.MAX_DEVIATION || '5' }}
         run: |
           ATTEMPTS=0
           until [ $ATTEMPTS -ge 3 ]
           do
-            python news_digest.py && break
+            python news_digest_enhanced.py && break
             ATTEMPTS=$((ATTEMPTS+1))
             echo "Fallo #$ATTEMPTS, reintentando en 20s..."
             sleep 20
