--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -30,7 +30,7 @@ jobs:
           SMTP_USER: ${{ secrets.SMTP_USER }}
           SMTP_PASS: ${{ secrets.SMTP_PASS }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          OPENAI_MODEL: ${{ secrets.OPENAI_MODEL || 'gpt-5-mini' }}
+          OPENAI_MODEL: ${{ secrets.OPENAI_MODEL || 'gpt-4o-mini' }}
           MAX_ARTICLES_PER_SOURCE: ${{ secrets.MAX_ARTICLES_PER_SOURCE || '3' }}
           SEND_LOCAL_TZ: ${{ secrets.SEND_LOCAL_TZ || 'America/Lima' }}
           SEND_AT_HHMM: ${{ secrets.SEND_AT_HHMM || '08:45' }}
